--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pursuit",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "A JavaScript Object Query Language",
     "author": "Martin Gausby <martin@gausby.dk>",
     "license": "MIT",
@@ -13,16 +13,15 @@
     "dependencies": {
     },
     "devDependencies": {
-        "grunt": ">= 0.4.0rc7",
-        "grunt-buster": ">= 0.1.2",
-        "grunt-contrib-jshint": ">= 0.1.0",
-        "grunt-contrib-watch": ">= 0.2.0rc7",
-        "grunt-clear": ">= 0.1.2",
-        "grunt-contrib-yuidoc": ">= 0.3.2",
+        "grunt": "0.4.1",
+        "grunt-buster": "0.2.1",
         "grunt-connect": ">= 0.2.0",
-        "grunt-benchmark": ">= 0.1.3",
-
-        "buster": ">= 0.6.12"
+        "grunt-contrib-jshint": "0.6.4",
+        "grunt-contrib-watch": "0.5.3",
+        "grunt-contrib-yuidoc": ">= 0.5.0",
+        "grunt-clear": "0.2.1",
+        "grunt-benchmark": ">= 0.2.0",
+        "buster": "0.7.6"
     },
     "scripts": {
         "test": "grunt test"
