--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "pursuit",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "A JavaScript Object Query Language",
+    "keywords": ["object", "query", "matcher", "filter"],
     "author": "Martin Gausby <martin@gausby.dk>",
     "license": "MIT",
     "repository": "git@github.com:gausby/pursuit.git",
