--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "pursuit",
-    "version": "0.1.0",
+    "version": "0.2.0",
+    "private": true,
     "description": "A JavaScript Object Query Language",
     "keywords": ["object", "query", "matcher", "filter"],
     "author": "Martin Gausby <martin@gausby.dk>",
